@@ -1,7 +1,13 @@
 from Foundation import NSObject
 from WSTConnectionWindowControllerClass import WSTConnectionWindowController
 
-class WSTApplicationDelegate (NSObject):
+from AppKit import NibLoader
+
+NibLoader.loadClassesForNibFromBundle( "MainMenu" )
+
+class WSTApplicationDelegate:
+  __metaclass__ = NibLoader.NibClassBuilder
+
   def newConnectionAction_(self, sender):
     WSTConnectionWindowController.connectionWindowController().showWindow_(sender)
 
